# cli_cleaner

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/cli_cleaner/: cli.py  config.py  core.py  display.py  presets.toml
src/cli_cleaner/commands/: __init__.py  clean.py  presets.py
src/cli_cleaner/core/: clean.py  config.py
tests/: conftest.py  test_cli.py  test_cli_cleaner.py
