[project]
name = "CLI_Cleaner"
version = "1.2"
description = "A command-line tool for safely cleaning files and directories using customizable rules and dry-run preview"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "DasKaroWow" }]
dependencies = [
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/DasKaroWow/cli_cleaner"
Source = "https://github.com/DasKaroWow/cli_cleaner"
Issues = "https://github.com/DasKaroWow/cli_cleaner/issues"

[project.scripts]
cleaner = "cli_cleaner.__main__:app"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.8",
    "taskipy>=1.14.1",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cli_cleaner"]
include = [
  "src/cli_cleaner/presets.toml",
]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["."]
exclude = ["migrations", ".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "B", "ANN", "ASYNC", "I"]
ignore = ["E501", "E701"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "native"
docstring-code-format = true
skip-magic-trailing-comma = false

[tool.taskipy.tasks]
lint = "ruff check --no-cache --fix ."
format = "ruff format --no-cache ."
test = "pytest -v"
precommit = "task format && task lint && task test"
dump = "python -m scripts.dump"

